--- a/src/main/resources/Templates/Home/MainMenu.html
+++ b/src/main/resources/Templates/Home/MainMenu.html
@@ -16,11 +16,11 @@
         #main{
             padding-top: 20px;
             padding-bottom: 20px;
-            padding-left: 43%;
-            padding-right: 45%;
+            padding-left: 42%;
+            padding-right: 43%;
             margin-left: auto;
             margin-right: auto;
-            background-color: #8b86c3
+            background-color: #8b86c3;
         }
     </style>
 
