--- a/src/main/resources/static/MyCss.css
+++ b/src/main/resources/static/MyCss.css
@@ -39,6 +39,9 @@ button.blue {
     background: #4C8FFB;
     border: 1px #3079ED solid;
     box-shadow: inset 0 1px 0 #80B0FB;
+    width: 100%;
+    table-layout: fixed;
+    border-collapse: collapse;
 }
 
 button.blue:hover {
