--- a/src/main/resources/static/MyCss.css
+++ b/src/main/resources/static/MyCss.css
@@ -1,10 +1,4 @@
 
-/* ////////////////////////////BODY//////////////////////// */
-
-
-
-/*////////////////////////TABLE/////////////////////////*/
-
 
 
 /* /////////////////////////////////// Buttons ////////////////////// */
@@ -19,6 +13,7 @@ button {
     font-size: 9pt;
     outline: none;
     margin: 3px;
+    text-align: center;
 }
 
 button:hover {
@@ -60,6 +55,8 @@ button.green {
     background: #70ad47;
     border: 1px #7add3a solid;
     box-shadow: inset 0 1px 0 #8ad455;
+    width: 94%;
+    border-collapse: collapse;
 }
 
 button.green:hover {
@@ -80,6 +77,9 @@ button.red {
     border: 1px solid #DD4B39;
     color: white;
     text-shadow: 0 1px 0 #C04131;
+    width: 100%;
+    table-layout: fixed;
+    border-collapse: collapse;
 }
 
 button.red:hover {
@@ -104,8 +104,6 @@ button.red:active {
 table{
     border-collapse: collapse;
     font-family: arial, sans-serif;
-    /*width: 1200px;
-    height: 300px;*/
     text-align: left;
     margin-left: auto;
     margin-right: auto;
