--- a/src/main/resources/Templates/Home/EmployeeAdd.html
+++ b/src/main/resources/Templates/Home/EmployeeAdd.html
@@ -1,58 +1,59 @@
-<DOCTYPE html>
-    <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Opret medarbejder</title>
-        <link rel="stylesheet" type="text/css" href="/MyCss.css">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+<head>
+    <meta charset="UTF-8">
+    <title>Opret medarbejder</title>
+    <link rel="stylesheet" type="text/css" href="/MyCss.css">
 
 
-    </head>
-    <body>
-    <div id="logo">
-        <a href="/"><img id="WizkidsLogo.png" src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
-    </div>
-    <h1>TILFØJ MEDARBEJDER</h1>
+</head>
+<body>
+<div id="logo">
+    <a href="/"><img id="WizkidsLogo.png" src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
+</div>
+<h1>TILFØJ MEDARBEJDER</h1>
 
-    <form action="/addEmployee" method="post">
+<form th:action="@{/}" th:object="${employee}" action="/addEmployee" method="post">
 
-        <table>
-            <tr>
-                <td>
-                    <label>Fornavn:</label>
-                </td>
-                <td>
-                    <input type="text" name="employeeFirstName"/>
-                </td>
-            </tr>
+    <table>
+        <tr>
+            <td>
+                <label>Fornavn:</label>
+            </td>
+            <td>
+                <input type="text" name="employeeFirstName"/>
+            </td>
+        </tr>
 
-            <tr>
-                <td>
-                    <label>Efternavn:</label>
-                </td>
-                <td>
-                    <input type="text" name="employeeLastName"/>
-                </td>
-            </tr>
+        <tr>
+            <td>
+                <label>Efternavn:</label>
+            </td>
+            <td>
+                <input type="text" name="employeeLastName"/>
+            </td>
+        </tr>
 
-            <tr>
-                <td>
-                    <label>Email:</label>
-                </td>
-                <td>
-                    <input type="text" name="employeeEmail"/>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <label>Telefon nr:</label>
-                </td>
-                <td>
-                    <input type="text" name="employeePhone"/>
-                </td>
-            </tr>
+        <tr>
+            <td>
+                <label>Email:</label>
+            </td>
+            <td>
+                <input type="text" name="employeeEmail"/>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label>Telefon nr:</label>
+            </td>
+            <td>
+                <input type="text" th:field="*{employeePhone}" name="employeePhone"/>
+            </td>
+            <td th:if="${#fields.hasErrors('employeePhone')}" th:errors="*{employeePhone}">Phone error</td>
+        </tr>
 
-        </table>
-        <input type="submit" value="Opret"/>
-    </form>
-    </body>
-    </html>
+    </table>
+    <input type="submit" value="Opret"/>
+</form>
+</body>
+
