--- a/src/main/resources/static/MyCss.css
+++ b/src/main/resources/static/MyCss.css
@@ -12,7 +12,8 @@ button {
     font-weight: bold;
     font-size: 9pt;
     outline: none;
-    margin: 3px;
+    margin-bottom: 10px;
+    margin-top: 10px;
     text-align: center;
 }
 
@@ -115,7 +116,7 @@ th{
     font-size: 16px;
     color: white;
     padding-left: 5px;
-    border: 1px solid white;
+    border: 1px solid grey;
 
 }
 
@@ -123,12 +124,15 @@ tr{
     background-color: white;
     padding-right: 2px;
     padding-left: 2px;
-    border: 1px solid white;
+    border: 1px solid grey;
 
 }
 
 td{
-    border-right: 1px solid white;
+    border-right: 1px solid grey;
+    padding-left: 3px;
+    padding-right: 2px;
+
 }
 
 tr:nth-child(even){
