Overskrifter rettet + fonts

--- a/src/main/resources/Templates/Home/SessionAdd.html
+++ b/src/main/resources/Templates/Home/SessionAdd.html
@@ -11,7 +11,7 @@
     <a href="/"><img id="WizkidsLogo.png" src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
 </div>
 
-<h1>TILFØJ MEDARBEJDER</h1>
+<h1>OPRET SESSION</h1>
 
 <form action="/addSession" method="post">
     <table>
