--- a/src/main/resources/static/MyCss.css
+++ b/src/main/resources/static/MyCss.css
@@ -15,6 +15,7 @@ button {
     margin-bottom: 5px;
     margin-top: 5px;
     text-align: center;
+    font-family: "Open Sans", Arial, sans-serif;
 }
 
 button:hover {
@@ -104,7 +105,7 @@ button.red:active {
 /* ///////////////// TABLES ///////////// */
 table{
     border-collapse: collapse;
-    font-family: arial, sans-serif;
+    font-family: "Open Sans", Arial, sans-serif;
     text-align: left;
     margin-left: auto;
     margin-right: auto;
@@ -145,7 +146,7 @@ tableScroll{
 
 /* ///////////// TEXT /////////////// */
 h1{
-    font-family:"Century Gothic";
+    font-family: "Open Sans", Arial, sans-serif;
     margin-bottom: 0.5vw;
     margin-top: 0.5vw;
     padding-bottom: 10px;
