Next level header design - Lykke, Hellesøe :)

--- a/src/main/resources/Templates/Home/MainMenu.html
+++ b/src/main/resources/Templates/Home/MainMenu.html
@@ -26,11 +26,13 @@
 
 </head>
 <body>
+
 <div id="logo">
     <a href="/"><img id="WizkidsLogo.png" src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
 </div>
+
     <h1>
-     HOVEDMENU
+     Hovedmenu
     </h1>
 <div id="main">
     <a href="/employeeList">
