har ændret mellemrum

--- a/src/main/resources/Templates/Home/EmployeeUpdate.html
+++ b/src/main/resources/Templates/Home/EmployeeUpdate.html
@@ -44,7 +44,7 @@
                 <p>Medarbejder-ID: </p>
             </td>
             <td>
-                <input type="text" name="employeeID" th:value="${employees.employeeID}"/>
+                <input type="text" name="employeeID" th:value="${employees.employeeID}" readonly/>
             </td>
         </tr>
 
