--- a/src/main/resources/Templates/Home/ProjectUpdate.html
+++ b/src/main/resources/Templates/Home/ProjectUpdate.html
@@ -43,7 +43,7 @@
                 <p>Project-ID: </p>
             </td>
             <td>
-                <input type="text" name="projectID" th:value="${project.projectID}"/>
+                <input type="text" name="projectID" th:value="${project.projectID}" readonly/>
             </td>
         </tr>
 
