--- a/src/main/resources/Templates/Home/SessionUpdate.html
+++ b/src/main/resources/Templates/Home/SessionUpdate.html
@@ -45,7 +45,7 @@
                 <p>Session-ID: </p>
             </td>
             <td>
-                <input type="text" name="sessionTimeID" th:value="${sessions.sessionTimeID}"/>
+                <input type="text" name="sessionTimeID" th:value="${sessions.sessionTimeID}" readonly/>
             </td>
         </tr>
         <tr>
