--- a/src/main/resources/Templates/Home/SessionUpdate.html
+++ b/src/main/resources/Templates/Home/SessionUpdate.html
@@ -89,7 +89,7 @@
             </td>
         </tr>
 
-        <input type="submit" value="Save changes"/>
+        <input class= save-btn type="submit" value="Save changes"/>
 
     </table>
 
