--- a/src/main/resources/Templates/Home/EmployeeUpdate.html
+++ b/src/main/resources/Templates/Home/EmployeeUpdate.html
@@ -30,10 +30,7 @@
         </div>
 
     </header>
-
-    <div>
-
-    </div>
+</div>
 
 <h1>Opdater medarbejdere</h1>
 
@@ -84,7 +81,7 @@
             </td>
         </tr>
 
-        <input type="submit" value="Save changes"/>
+        <input class= save-btn type="submit" value="Save changes"/>
 
     </table>
 
