--- a/src/main/resources/Templates/Home/MainMenu.html
+++ b/src/main/resources/Templates/Home/MainMenu.html
@@ -4,55 +4,35 @@
     <meta charset="UTF-8">
     <title>Hovedmenu</title>
     <link rel="stylesheet" type="text/css" href="/MyCss.css"/>
-    <style>
 
-        body {
-            text-align: center;
-        }
-        table{
-            margin-left: auto;
-            margin-right: auto;
-        }
-        #main{
-            padding-top: 20px;
-            padding-bottom: 20px;
-            padding-left: 42%;
-            padding-right: 42%;
-            margin-left: auto;
-            margin-right: auto;
-            background-color: #8b86c3;
-        }
-    </style>
 
 </head>
 <body>
+<div id="wrapper">
+    <header id="header">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="logo" href="/"><img src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
 
-<div id="logo">
-    <a href="/"><img id="WizkidsLogo.png" src="/WizkidsLogo.png" alt="WizkidsLogo"></a>
+                <a id="menu-item-32" href="/employeeList">
+                    <button class="topButton" id="btn-employeeList">Medarbejdere</button>
+                </a>
+                <a id="menu-item-33" href="/sessionList">
+                    <button class="topButton" id="btn-sessionList">Sessioner</button>
+                </a>
+                <a id="menu-item-34" href="/projectList">
+                    <button class="topButton" id="btn-projectList">Projekter</button>
+                </a>
+            </div>
+        </div>
+    </header>
 </div>
 
-    <h1>
-     Hovedmenu
-    </h1>
+<h1>Hovedmenu</h1>
 <div id="main">
-    <a href="/employeeList">
-    <button class="blue" id="btn-employeeList">Vis medarbejderliste</button>
-    </a>
-    <a href="/sessionList">
-    <button class="blue" id="btn-sessionList">Se alle sessioner</button>
-    </a>
-    <a href="/projectList">
-    <button class="blue" id="btn-projectList">Se alle projekter</button>
-    </a>
-    <a href="/projectManagerList">
-        <button class="blue" id="btn-projectManagarList">Leder Menu</button>
-    </a>
-</div>
-
-
-
-
 
 </div>
+
+
 </body>
 </html>
