--- a/src/main/resources/Templates/Home/ProjectAdd.html
+++ b/src/main/resources/Templates/Home/ProjectAdd.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Tilføj projekt</title>
@@ -72,6 +72,26 @@
             </td>
             <td>
                 <input type="text" name="projectUsedTime"/>
+            </td>
+        </tr>
+        <tr>
+
+            <td>
+                <label>Deadline</label>
+            </td>
+            <td>
+                <input type="text" name="projectDeadline"/>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <label>Status på projektet</label>
+            </td>
+            <td>
+                <select name="projectDone">
+                    <option value="Igang">Igang</option>
+                    <option value="Afsluttet">Afsluttet</option>
+                </select>
             </td>
         </tr>
     </table>
