--- a/src/main/resources/Templates/Home/ProjectList.html
+++ b/src/main/resources/Templates/Home/ProjectList.html
@@ -40,6 +40,8 @@
             <th>Manager navn</th>
             <th>Forventet tid</th>
             <th>Brugt tid</th>
+            <th>Deadline</th>
+            <th>Status</th>
             <th>
                 <a href="/addProject">
                     <button class="green" id="btn-addProject">Opret projekt</button>
@@ -56,12 +58,12 @@
             <td th:text="${project.projectManagerName}"/>
             <td th:text="${project.projectExpectedTime}"/>
             <td th:text="${project.projectUsedTime}"/>
+            <td th:text="${project.projectDeadline}"/>
+            <td th:text="${project.projectDone}"/>
             <td>
-
                 <a th:href="@{'/updateProject/'+${project.projectID}}">
                     <button class="blue" id="btn-updateProject"><i class="material-icons" style="font-size:26px">settings</i></button>
                 </a>
-
                 <!-- <a th:href="@{'/deleteProject/'+${project.projectID}}">
                        <button class="red" id="btn-delete">Slet</button>
                    </a> -->
