--- a/src/main/resources/Templates/Home/ProjectUpdate.html
+++ b/src/main/resources/Templates/Home/ProjectUpdate.html
@@ -27,7 +27,7 @@
     </header>
 </div>
 
-<h1>Opdater session</h1>
+<h1>Opdater project</h1>
 
 <form action="/updateProject" method="post">
     <table>
