--- a/src/main/resources/Templates/Home/SessionList.html
+++ b/src/main/resources/Templates/Home/SessionList.html
@@ -66,7 +66,7 @@
 
         <td>
             <a th:href="@{'/updateSession/'+${sessionTime.sessionTimeID}}">
-                <button class="blue" id="btn-update">
+                <button class="blue" id="btn-updateSession">
                     <i class="material-icons" style="font-size:25px">settings</i>
                 </button>
             </a>
