--- a/src/main/resources/Templates/Home/EmployeeAdd.html
+++ b/src/main/resources/Templates/Home/EmployeeAdd.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Opret medarbejder</title>
     <link rel="stylesheet" type="text/css" href="/MyCss.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
 
 </head>
@@ -70,8 +72,19 @@
             </td>
         </tr>
 
+        <tr>
+            <td colspan="2">
+                <button class="green" type="submit">
+                    <i class="material-icons" style="font-size:25px">create</i>
+                </button>
+            </td>
+        </tr>
+
     </table>
-    <input type="submit" value="Opret"/>
+
+
+
+
 </form>
 </body>
 </html>
