--- a/src/main/resources/Templates/Home/ProjectAdd.html
+++ b/src/main/resources/Templates/Home/ProjectAdd.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <title>Tilføj projekt</title>
     <link rel="stylesheet" type="text/css" href="/MyCss.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 
 </head>
 <body>
@@ -94,8 +96,17 @@
                 </select>
             </td>
         </tr>
+
+        <tr>
+            <td colspan="2">
+                <button class="green" type="submit">
+                    <i class="material-icons" style="font-size:25px">create</i>
+                </button>
+            </td>
+        </tr>
+
     </table>
-    <input type="submit" value="Opret"/>
+
 </form>
 
 </body>
