--- a/src/main/resources/Templates/Home/SessionAdd.html
+++ b/src/main/resources/Templates/Home/SessionAdd.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Tilføj session</title>
     <link rel="stylesheet" type="text/css" href="/MyCss.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
 <body>
@@ -74,8 +75,15 @@
             </td>
         </tr>
 
+        <tr>
+            <td colspan="2">
+                <button class="green" type="submit">
+                    <i class="material-icons" style="font-size:25px">create</i>
+                </button>
+            </td>
+        </tr>
+
     </table>
-    <input type="submit" value="Opret"/>
 </form>
 
 </body>
