--- a/src/main/resources/Templates/Home/EmployeeUpdate.html
+++ b/src/main/resources/Templates/Home/EmployeeUpdate.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Opdater medarbejdere</title>
     <link rel="stylesheet" type="text/css" href="/MyCss.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
 </head>
 <body>
@@ -77,7 +78,13 @@
             </td>
         </tr>
 
-        <input class= save-btn type="submit" value="Save changes"/>
+        <tr>
+            <td colspan="2">
+                <button class="green" type="submit">
+                    <i class="material-icons" style="font-size:25px">save</i>
+                </button>
+            </td>
+        </tr>
 
     </table>
 
