--- a/src/main/resources/Templates/Home/ProjectList.html
+++ b/src/main/resources/Templates/Home/ProjectList.html
@@ -44,7 +44,9 @@
             <th>Status</th>
             <th>
                 <a href="/addProject">
-                    <button class="green" id="btn-addProject">Opret projekt</button>
+                    <button class="green" id="button-create">
+                        <i class="material-icons" style="font-size:25px">create</i>
+                    </button>
                 </a>
             </th>
         </tr>
