--- a/src/main/resources/Templates/Home/SessionList.html
+++ b/src/main/resources/Templates/Home/SessionList.html
@@ -44,7 +44,9 @@
         <th>Projekt navn</th>
         <th colspan="2">
             <a href="/addSession">
-                <button class="green" id="btn-addProject">Opret session</button>
+                <button class="green" id="button-create">
+                    <i class="material-icons" style="font-size:25px">create</i>
+                </button>
             </a>
         </th>
     </tr>
@@ -72,8 +74,11 @@
             </a>
         </td>
         <td>
+
             <a th:href="@{'/deleteSessionTime/'+${sessionTime.sessionTimeID}}">
-                <button class="red" id="btn-delete">Slet</button>
+                <button class="red" id="btn-delete">
+                    <i class="material-icons" style="font-size:25px">delete_forever</i>
+                </button>
             </a>
         </td>
     </tr>
