--- a/src/main/resources/Templates/Home/MainMenu.html
+++ b/src/main/resources/Templates/Home/MainMenu.html
@@ -74,32 +74,43 @@
 </div>
 <script>
     var slideIndex = 1;
+    var t;
+
     showSlides(slideIndex);
 
-    // Next/previous controls
     function plusSlides(n) {
-        showSlides(slideIndex += n);
+        slideIndex = slideIndex + n;
+        clearTimeout(t);
+        showSlides(slideIndex);
+        console.log(slideIndex);
     }
 
-    // Thumbnail image controls
     function currentSlide(n) {
         showSlides(slideIndex = n);
     }
 
     function showSlides(n) {
+
         var i;
         var slides = document.getElementsByClassName("mySlides");
-        var dots = document.getElementsByClassName("dot");
-        if (n > slides.length) {slideIndex = 1}
-        if (n < 1) {slideIndex = slides.length}
+
+        if (n == undefined) {
+            n = ++slideIndex;
+        }
+
+        if (n > slides.length) {
+            slideIndex = 1
+        }
+        if (n < 1) {
+            slideIndex = slides.length
+        }
+
         for (i = 0; i < slides.length; i++) {
             slides[i].style.display = "none";
         }
-        for (i = 0; i < dots.length; i++) {
-            dots[i].className = dots[i].className.replace(" active", "");
-        }
-        slides[slideIndex-1].style.display = "block";
-        dots[slideIndex-1].className += " active";
+
+        slides[slideIndex - 1].style.display = "block";
+        t = setTimeout(showSlides, 5000);
     }
 </script>
 
