Main menu fixed

--- a/src/main/resources/Templates/Home/MainMenu.html
+++ b/src/main/resources/Templates/Home/MainMenu.html
@@ -1,19 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:width="http://www.w3.org/1999/xhtml">
+<html lang="en" xmlns:width="http://www.w3.org/1999/xhtml" xmlns:text-align="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Hovedmenu</title>
     <link rel="stylesheet" type="text/css" href="/MyCss.css"/>
-    <style>
-
-        body {
-            text-align: center;
-        }
-        table{
-            margin-left: auto;
-            margin-right: auto;
-        }
-    </style>
 
 </head>
 <body>
@@ -113,6 +103,5 @@
         t = setTimeout(showSlides, 5000);
     }
 </script>
-
 </body>
 </html>
