--- a/src/main/resources/Templates/Home/ProjectAdd.html
+++ b/src/main/resources/Templates/Home/ProjectAdd.html
@@ -100,7 +100,7 @@
         <tr>
             <td colspan="2">
                 <button class="green" type="submit">
-                    <i class="material-icons" style="font-size:25px">create</i>
+                    <i class="material-icons" style="font-size:25px">save</i>
                 </button>
             </td>
         </tr>
