--- a/src/main/resources/Templates/Home/EmployeeAdd.html
+++ b/src/main/resources/Templates/Home/EmployeeAdd.html
@@ -75,14 +75,12 @@
         <tr>
             <td colspan="2">
                 <button class="green" type="submit">
-                    <i class="material-icons" style="font-size:25px">create</i>
+                    <i class="material-icons" style="font-size:25px">save</i>
                 </button>
             </td>
         </tr>
 
     </table>
-
-
 
 
 </form>
